# fastapi-example

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routers/: items.py
deploy/: Dockerfile
