[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Douglas S. Camargo <me@dscamargo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
